# token_tracking

backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.tasks  README.md  docker-compose.yml  pyproject.toml  requests.rest  requirements.txt
backend/http-requests/: invitations.http  notifications.http  tenders.http  users.http
backend/minerva/api/: main.py
backend/minerva/api/routes/: ai_routes.py  analytics_routes.py  api_key_routes.py  assistant_routes.py  comment_routes.py  contact_routes.py  conversation_routes.py  cost_tracking_routes.py  file_routes.py  folder_routes.py  invitation_routes.py  kanban_board_routes.py  observability_routes.py  organization_routes.py  reset_password_routes.py  retrieval_routes.py  scraping_routes.py  table_routes.py  test_notification_routes.py  user_notification_routes.py  user_routes.py  waitlist_routes.py
backend/minerva/config/: constants.py  logging_config.py
backend/minerva/core/database/: database.py
backend/minerva/core/helpers/: biznespolska_oferent_shared.py  deep_search.py  external_comparison.py  file_upload.py  s3_upload.py  vercel_upload.py
backend/minerva/core/middleware/: token_tracking.py
backend/minerva/core/models/: assistant.py  columns.py  comment.py  conversation.py  cost_tracking.py  file.py  folder.py  invitation.py  kanban_board.py  notification.py  observability_history.py  organization.py  password_reset_token.py  subscription.py  user.py  waitlist.py
backend/minerva/core/services/: ai_pick_main_doc.py  browser_service.py  cost_tracking_service.py  deep_search_service.py  function_calls.py  llm_cost_wrapper.py  llm_logic.py  response_stream.py  tender_notification_service.py
backend/minerva/core/utils/: conversation_title_generator.py  date_standardizer.py  email_utils.py  notification_translations.py  notification_utils.py  pdf_ocr.py  vector_store_name_generator.py
backend/minerva/tasks/: analysis_runner.py  cleanup_runner.py  external_scraping_runner.py  historical_runner.py  monitoring_runner.py  scraping_runner.py  tasks_app.py  tender_analysis_scheduler.py
backend/minerva/tests/: test_extractors.py
frontend/: .eslintrc.json  (+7 more)
(+607 files in other folders)
